# checkers

./: Cargo.toml  README.md  README.org
benches/: my_benchmark.rs
src/: board.rs  gui.rs  main.rs  player_minmax.rs  player_random.rs
