[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26.0"
egui = "0.26.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

